# rapidchart-engine

./: .gitignore  .npmignore  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: deploy-pages.yml
benchmarks/results/: bench-2026-07-03T07-24-10.389Z.json  bench-2026-07-03T07-26-18.246Z.json  bench-2026-07-03T07-30-30.371Z.json  bench-2026-07-03T07-52-38.374Z.json  bench-2026-07-03T07-56-04.909Z.json  bench-2026-07-03T07-58-57.716Z.json  bench-2026-07-03T08-36-51.589Z.json  bench-2026-07-03T08-38-44.232Z.json  bench-2026-07-03T08-41-09.962Z.json  bench-2026-07-03T15-04-18.593Z.json  bench-2026-07-03T15-05-40.550Z.json  bench-2026-07-03T15-13-23.111Z.json  bench-2026-07-03T15-16-50.138Z.json  bench-2026-07-04T02-46-11.430Z.json  bench-2026-07-04T02-51-40.863Z.json  bench-2026-07-04T03-06-04.562Z.json  bench-2026-07-04T04-22-18.714Z.json  bench-2026-07-04T04-29-15.576Z.json  bench-2026-07-05T13-10-46.534Z.json  bench-2026-07-07T07-59-02.457Z.json  bench-2026-07-07T08-02-58.188Z.json  bench-indicators-2026-07-07T08-02-52.099Z.json
docs/: formula-indicators-plan.md  formula-script-reference.md  zero-copy-design.md
examples/app/: fixtures.ts  main.ts  style.css
scripts/: bench-browser.mjs  bench-compare.mjs  bench-indicators.mjs  bench-load-browser.mjs  bench-snapshot-browser.mjs  bench.mjs  check-formula-browser.mjs
src/: bar.rs  dag.rs  descriptors.rs  dispatch.rs  engine.ts  fixtures.ts  formula.rs  helpers.rs  lib.rs  main.ts  series.rs  style.css  tests.rs  types.rs
src/indicators/: adl.rs  adx.rs  aroon.rs  (+124 more)
